--- a/Project/AMS/templates/c/confirm_order.html
+++ b/Project/AMS/templates/c/confirm_order.html
@@ -106,7 +106,7 @@
     {% endwith %}
     {% block content%}{%endblock%}
 
-    <form class="form" action="" method="POST">
+    <form class="form" action="#" method="POST">
       <input type="radio" name="type" value="confirm" style="display:none" checked>
       <input type="radio" name="flight_id" value="{{result[6]}}" style="display:none" checked>
       <div class="form-group">
