--- a/Project/AMS/templates/a/addplane.html
+++ b/Project/AMS/templates/a/addplane.html
@@ -1,4 +1,4 @@
-{% extends "index.html"%}
+{% extends "a/add.html"%}
 {% block content%}
  <h1> Add plane for {{g.user[5]}}</h1>
  <form action="#" method="POST">
