--- a/Project/AMS/templates/a/reports.html
+++ b/Project/AMS/templates/a/reports.html
@@ -1,24 +1,76 @@
-{% extends "index.html"%}
-{% block content%}
-<h1> Reports</h1>
-   <form action="#" method="POST">
-       Start Date: <input type="date" name="start_date"><br>
-       End Date: <input type="date" name="end_date"><br>
-       <input type="submit" value="Search">
-   </form>
-{% if search_result %}
-    Ticket Sold between {{start_date}} and {{end_date}}: {{search_result[0]}} 
-{% endif %}
-<h2>Past One Month</h2>
-{% for i in last_month %}
-   Customer {{i[0]}}
-   Customer Email {{i[1]}} 
-   Purchase Time {{i[2]}}<br>
-{% endfor %}
-<h2>Past One Year</h2>
-{% for i in last_year %}
-   Month {{i[0]}}
-   Sold {{i[1]}} <br>
-{% endfor %}
-{% endblock %}
+{%extends "dashboard.html"%}
+{%block tab%}
+<li class="nav-item">
+    <a class="nav-link" id="history-tab" href="/a/flights" role="tab" aria-controls="history"
+        aria-selected="true">Current Flights</a>
+</li>
+<li class="nav-item">
+
+    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+        aria-expanded="false">Add</a>
+    <div class="dropdown-menu">
+        <a class="dropdown-item" href="/a/addflights">Add Flights</a>
+        <div class="dropdown-divider"></div>
+        <a class="dropdown-item" href="/a/addplane">Add Plane</a>
+        <div class="dropdown-divider"></div>
+        <a class="dropdown-item" href="/a/addairport">Add Airport</a>
+    </div>
+</li>
+<li class="nav-item">
+    <a class="nav-link" href="/a/ba" role="tab" aria-controls="stats" aria-selected="false">Booking
+        Agent</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link" href="/a/customer" role="tab" aria-controls="stats"
+        aria-selected="false">Frequent Customer</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link active" href="/a/reports" role="tab" aria-controls="stats"
+        aria-selected="false">Sales Report</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link" href="/a/revenue" role="tab" aria-controls="stats"
+        aria-selected="false">Revenue</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link" href="/a/topdest" role="tab" aria-controls="stats" aria-selected="false">Top
+        Destination</a>
+</li>
+{%endblock%}
+
+{%block panel%}
+
+<div class="container" style="padding:0px">
+    
+        <h1> Reports</h1>
+        <form action="#" method="POST">
+            Start Date: <input type="date" name="start_date"><br>
+            End Date: <input type="date" name="end_date"><br>
+            <input type="submit" value="Search">
+        </form>
+     {% if search_result %}
+         Ticket Sold between {{start_date}} and {{end_date}}: {{search_result[0]}} 
+     {% endif %}
+     <h2>Past One Month</h2>
+     {% for i in last_month %}
+        Customer {{i[0]}}
+        Customer Email {{i[1]}} 
+        Purchase Time {{i[2]}}<br>
+     {% endfor %}
+     <h2>Past One Year</h2>
+     {% for i in last_year %}
+        Month {{i[0]}}
+        Sold {{i[1]}} <br>
+     {% endfor %}
+
+
+
+</div>
+<style>
+    .table-striped>tbody>tr:nth-child(odd)>td,
+    .table-striped>tbody>tr:nth-child(odd)>th {
+        background-color: #bfeef3;
+    }
+</style>
+{%endblock%}
     
