--- a/Project/AMS/templates/a/revenue.html
+++ b/Project/AMS/templates/a/revenue.html
@@ -1,10 +1,61 @@
-{% extends "index.html"%}
-{% block content%}
-<h1>Revenue</h1>
-<h2>Month</h2>
-Direct Sell: {{direct_sell_month[0]}} <br>
-Indirect Sell: {{indirect_sell_month[0]}}
-<h2>Year</h2>
-Direct Sell: {{direct_sell_year[0]}} <br>
-Indirect Sell: {{indirect_sell_year[0]}}
-{% endblock %}
+{%extends "dashboard.html"%}
+{%block tab%}
+<li class="nav-item">
+    <a class="nav-link" id="history-tab" href="/a/flights" role="tab" aria-controls="history"
+        aria-selected="true">Current Flights</a>
+</li>
+<li class="nav-item">
+
+    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+        aria-expanded="false">Add</a>
+    <div class="dropdown-menu">
+        <a class="dropdown-item" href="/a/addflights">Add Flights</a>
+        <div class="dropdown-divider"></div>
+        <a class="dropdown-item" href="/a/addplane">Add Plane</a>
+        <div class="dropdown-divider"></div>
+        <a class="dropdown-item" href="/a/addairport">Add Airport</a>
+    </div>
+</li>
+<li class="nav-item">
+    <a class="nav-link" href="/a/ba" role="tab" aria-controls="stats" aria-selected="false">Booking
+        Agent</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link" href="/a/customer" role="tab" aria-controls="stats"
+        aria-selected="false">Frequent Customer</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link" href="/a/reports" role="tab" aria-controls="stats"
+        aria-selected="false">Sales Report</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link active" href="/a/revenue" role="tab" aria-controls="stats"
+        aria-selected="false">Revenue</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link" href="/a/topdest" role="tab" aria-controls="stats" aria-selected="false">Top
+        Destination</a>
+</li>
+{%endblock%}
+
+{%block panel%}
+
+<div class="container" style="padding:0px">
+    
+
+        <h1>Revenue</h1>
+        <h2>Month</h2>
+        Direct Sell: {{direct_sell_month[0]}} <br>
+        Indirect Sell: {{indirect_sell_month[0]}}
+        <h2>Year</h2>
+        Direct Sell: {{direct_sell_year[0]}} <br>
+        Indirect Sell: {{indirect_sell_year[0]}}
+
+</div>
+<style>
+    .table-striped>tbody>tr:nth-child(odd)>td,
+    .table-striped>tbody>tr:nth-child(odd)>th {
+        background-color: #bfeef3;
+    }
+</style>
+{%endblock%}
