updated index page

--- a/Project/AMS/templates/c/login_c.html
+++ b/Project/AMS/templates/c/login_c.html
@@ -1,6 +1,6 @@
 {%extends "login.html"%}
 {%block header %} <div class="">
-    User Login
+    Customer Login
 </div> {%endblock%}
 {%block content%}
 <form action="#" method="POST">
